// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnhancedReferralTab renders correctly 1`] = `
.c0 {
  margin: 0.75rem 2rem 0.75rem 2rem;
}

<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="AgencyResponseForm container-fluid"
  >
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Date of Initial Enhanced Referral Notification Sent
      </label>
      <div
        className="col-md-8 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-initialNotificationSentOn"
              name="initialNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Date of 30 Day Enhanced Referral Notification Sent
      </label>
      <div
        className="col-md-8 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-thirtyDayNotificationSentOn"
              name="thirtyDayNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Date of 60 Day Enhanced Referral Notification Sent
      </label>
      <div
        className="col-md-8 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-sixtyDayNotificationSentOn"
              name="sixtyDayNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Date of 90 Day Enhanced Referral Notification Sent
      </label>
      <div
        className="col-md-8 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-ninetyDayNotificationSentOn"
              name="ninetyDayNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <h3>
      Agency Interest
    </h3>
    <div
      className="PropertyListView container-fluid"
    >
      <div
        className="ScrollContainer"
      >
        <div
          className="table"
          role="table"
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          <div
            className="thead thead-light"
          >
            <div
              className="tr"
              role="row"
              style={
                Object {
                  "display": "flex",
                  "flex": "1 0 auto",
                  "minWidth": "120px",
                }
              }
            >
              <div
                className="th"
                colSpan={1}
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "alignItems": "center",
                    "boxSizing": "border-box",
                    "display": "flex",
                    "flex": "100 0 auto",
                    "justifyContent": "flex-start",
                    "minWidth": "30px",
                    "textAlign": "left",
                    "width": "100px",
                  }
                }
              >
                Agency
              </div>
              <div
                className="th"
                colSpan={1}
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "alignItems": "center",
                    "boxSizing": "border-box",
                    "display": "flex",
                    "flex": "60 0 auto",
                    "justifyContent": "flex-start",
                    "minWidth": "30px",
                    "textAlign": "left",
                    "width": "60px",
                  }
                }
              >
                Business Case Received Date
              </div>
              <div
                className="th"
                colSpan={1}
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "alignItems": "center",
                    "boxSizing": "border-box",
                    "display": "flex",
                    "flex": "100 0 auto",
                    "justifyContent": "flex-start",
                    "minWidth": "30px",
                    "textAlign": "left",
                    "width": "100px",
                  }
                }
              >
                Note
              </div>
              <div
                className="th"
                colSpan={1}
                onClick={[Function]}
                role="columnheader"
                style={
                  Object {
                    "alignItems": "center",
                    "boxSizing": "border-box",
                    "display": "flex",
                    "flex": "60 0 auto",
                    "justifyContent": "flex-start",
                    "minWidth": "30px",
                    "textAlign": "left",
                    "width": "60px",
                  }
                }
              >
                Response
              </div>
            </div>
          </div>
          <div
            className="no-rows-message"
          >
            No rows to display
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="EnhancedReferralCompleteForm container-fluid"
  >
    <h3>
      Enhanced Referral Process Complete
    </h3>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        On Hold Notification Sent
         
        <svg
          className="tooltip-icon"
          fill="currentColor"
          height="1em"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-onHoldNotificationSentOn"
              name="onHoldNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="col-md-6"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Place Project On Hold
        </button>
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Date Transferred within the GRE
        <svg
          className="tooltip-icon"
          fill="currentColor"
          height="1em"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-transferredWithinGreOn"
              name="transferredWithinGreOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="col-md-6"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Update Property Information
        </button>
      </div>
    </div>
    <div
      className="c0"
    >
      OR
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Clearance Notification Sent
        <svg
          className="tooltip-icon"
          fill="currentColor"
          height="1em"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-clearanceNotificationSentOn"
              name="clearanceNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Request for SPL Received On
        <svg
          className="tooltip-icon"
          fill="currentColor"
          height="1em"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-requestForSplReceivedOn"
              name="requestForSplReceivedOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="col-md-6"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Proceed to SPL
        </button>
        <div
          className="c0"
        >
          OR
        </div>
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Not Included in the SPL
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`EnhancedReferralTab renders correctly when approved for exemption 1`] = `
.c0 {
  margin: 0.75rem 2rem 0.75rem 2rem;
}

<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="EnhancedReferralCompleteForm container-fluid"
  >
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-12 form-group"
      >
        <label
          className="form-label"
          htmlFor="input-exemptionRationale"
        >
          Exemption Rationale
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-exemptionRationale"
          name="exemptionRationale"
          onBlur={[Function]}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Clearance Notification Sent
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-clearanceNotificationSentOn"
              name="clearanceNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <h3>
      Option 1: Transfer within the GRE
    </h3>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Date Transferred within the GRE
        <svg
          className="tooltip-icon"
          fill="currentColor"
          height="1em"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={true}
              id="datepicker-transferredWithinGreOn"
              name="transferredWithinGreOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="col-md-6"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Update Property Information
        </button>
      </div>
    </div>
    <h3>
      Option 2: Proceed to Surplus Properties List
    </h3>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Request Received On
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={true}
              id="datepicker-requestForSplReceivedOn"
              name="requestForSplReceivedOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="justify-content-center"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Proceed to SPL
        </button>
        <div
          className="c0"
        >
          OR
        </div>
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Not Included in the SPL
        </button>
      </div>
    </div>
    <h3>
      Option 3: Add to Enhanced Referral Process
    </h3>
    <div
      className="form-row"
    >
      <div
        className="justify-content-center add-space-below"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Add to Enhanced Referral Process
        </button>
      </div>
    </div>
  </div>
</form>
`;
